--- a/hobbies.html
+++ b/hobbies.html
@@ -9,7 +9,7 @@
 <body>
   <h1>My Hobbies</h1>
   <ol type="i">
-    <li><a href="https://steamcommunity.com/id/gorno_/" target="_blank">Gaming</a></li>
+    <li>Gaming</li>
     <li>Music</li>
     <li>Dogaeg</li>
   </ol>
