--- a/index.html
+++ b/index.html
@@ -3,24 +3,29 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="This is Uday's personal site for practicing web development."
   <title>Uday's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <table cellspacing="20">
+  <!--margin: auto not part of course-->
+  <table cellspacing="20" style="margin: auto;">
     <tr>
       <td><img src="images\uday-profile-picture.jpg" alt="uday profile picture" width=175px height=175px>
       </td>
       <td>
         <h1>Uday</h1>
-        <p><em>Web Developer :)</em></p>
-        <p>Senior web developer at Web Developers Company :))</p>
+        <p><em>Front-End Web Developer</em></p>
+        <p>I’m a front-end web developer with over 3 days of experience. <br>
+          I work with agencies across the globe to create high performance & rich interactive websites that work across all platforms & devices.</p>
       </td>
     </tr>
   </table>
   <hr>
   <h3>Education</h3>
-  <ul type="circle">
+  <ul type="disc">
+    <!--target="_blank" not part of course-->
     <li><a href="https://www.senecacollege.ca/home.html" target="_blank"><strong>Seneca College of Applied Arts and Technology</strong></a></li>
   </ul>
   <hr>
@@ -34,12 +39,12 @@
     </thead>
     <tbody>
       <tr>
-        <td>2003</td>
-        <td>Junior Systems Administrator at Systems Administration Co</td>
+        <td>2020-2020</td>
+        <td>Junior Front-End Developer at Homenick PLC</td>
       </tr>
       <tr>
-        <td>2004-2021</td>
-        <td>Software Engineer at Softwarers Engineering Ltd</td>
+        <td>2020-</td>
+        <td>Front-End Accessibility Expert at Medhurst-Thiel</td>
       </tr>
     </tbody>
   </table>
@@ -48,26 +53,26 @@
   <table cellspacing="10">
     <!--Table start-->
     <tr>
-      <td>Web Development</td>
-      <td>⭐⭐⭐⭐⭐</td>
+      <td>HTML & CSS</td>
+      <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
       <td>Graphic Design</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Animation</td>
       <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
       <td>Music Production</td>
-      <td>⭐⭐⭐</td>
+      <td>⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Javascript</td>
+      <td>😐</td>
     </tr>
   </table>
   <!--Table end-->
   <hr>
-  <a href="hobbies.html">My Hobbies</a>
-  <a href="contact-me.html">Contact Me</a>
+  <a class="button" href="hobbies.html">My Hobbies</a>
+  <a class="button" href="contact-me.html">Contact Me</a>
 </body>
 
 </html>
