--- a/contact-me.html
+++ b/contact-me.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Me - Uday's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -17,14 +18,18 @@
   <hr>
   <form action="mailto:naturalanthem3@protonmail.com" method="post" enctype="text/plain">
     <label>Your Name:</label>
-    <input type="text" name="yourName" value=""><br>
+    <input type="text" name="yourName" value="">
+    <br>
     <label>Your Email:</label>
-    <input type="email" name="yourEmail"><br>
-    <label>Your Message:</label><br>
+    <input type="email" name="yourEmail">
+    <br>
+    <label>Your Message:</label>
+    <br>
     <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
     <input type="submit" name="">
   </form>
-  <a href="index.html">Return</a>
+  <br>
+  <a class="button" href="index.html">Return</a>
 </body>
 
 </html>
