--- a/hobbies.html
+++ b/hobbies.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>My Hobbies - Uday's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
     <li>Music</li>
     <li>Dogaeg</li>
   </ol>
-  <a href="index.html">Return</a>
+  <a class="button" href="index.html">Return</a>
 </body>
 
 </html>
