Forgot to close <meta> tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="This is Uday's personal site for practicing web development."
+  <meta name="description" content="This is Uday's personal site for practicing web development.">
   <title>Uday's Personal Site</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
